# Keegan

./: .gitignore  render.yaml  start_dev.ps1
ai_radio/: CMakeLists.txt  DEPLOY.md  DESIGN.md  Procfile  README.md  generate_assets.py  generate_voice.py  implementation_plan.md  llm_server.py  requirements.txt  spec_improvements.md
ai_radio/.github/: copilot-instructions.md
ai_radio/api/: index.py
ai_radio/assets/: tray_colors.json
ai_radio/assets/presets/: README.txt
ai_radio/assets/stems/arcade/: README.txt
ai_radio/assets/stems/focus/: README.txt
ai_radio/assets/stems/rain/: README.txt
ai_radio/assets/stems/sleep/: README.txt
ai_radio/config/: moods.json  station.json  stories.json
ai_radio/docs/: LOCAL_BRIDGE_API.md  MODDING_GUIDE.md  RADIOVERSE_SPEC.md  REGISTRY_API.md  ROADMAP.md  STATION_HOSTING_SPEC.md
ai_radio/ingest/: Dockerfile  README.md  fly.toml  mediamtx.yml
ai_radio/llm_router/: CMakeLists.txt
ai_radio/llm_router/.github/: copilot-instructions.md
ai_radio/llm_router/config/: router.json
ai_radio/llm_router/src/: main.cpp
ai_radio/llm_router/src/config/: loader.cpp  loader.h
ai_radio/llm_router/src/http/: server.cpp  server.h
ai_radio/llm_router/src/logging/: logger.cpp  logger.h
ai_radio/llm_router/src/providers/: base_client.h  openai_client.cpp  openai_client.h
ai_radio/llm_router/src/routing/: router.cpp  router.h
ai_radio/mods/: README.md
ai_radio/mods/example_neon/: README.md  manifest.json  moods.json
ai_radio/server/: README.md  registry_server.py
ai_radio/server/ingest/: README.md  mediamtx.yml
ai_radio/server/static/: index.html
ai_radio/server/tests/: test_registry.py
ai_radio/src/: main.cpp
ai_radio/src/audio/: crossfade.h  device.cpp  device.h  ducking.cpp  ducking.h  engine.cpp  engine.h  filter.h  limiter.cpp  limiter.h  oscillator.h  reverb.cpp  reverb.h  scheduler.cpp  scheduler.h  stem_player.cpp  stem_player.h
ai_radio/src/brain/: app_heuristics.cpp  app_heuristics.h  state_machine.cpp  state_machine.h  story_generator.cpp  story_generator.h
ai_radio/src/config/: mood_loader.cpp  mood_loader.h
ai_radio/src/ui/: tray.cpp  tray.h  web_server.cpp  web_server.h  ws_server.cpp  ws_server.h
ai_radio/src/util/: logger.cpp  logger.h  platform.cpp  platform.h  telemetry.cpp  telemetry.h
ai_radio/src/voice/: story_bank.cpp  story_bank.h
ai_radio/tools/: telemetry_summary.py
ai_radio/web/: index.html  package-lock.json  package.json  vite.config.ts
ai_radio/web/scripts/: check_registry.mjs
ai_radio/web/src/: App.tsx  index.css
ai_radio/web/src/components/: HUD.tsx  ShareModal.css  ShareModal.tsx  StationDirectory.tsx
ai_radio/web/src/lib/: AudioEngine.ts
